Fix fieldset appearance on mobile

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,85 +1,68 @@
 .navbar {
-     background-color: var(--dark-primary-color);
-     color: var(--primary-text);
-     display: flex;
-     justify-content: space-between;
-     align-items: center;
-     padding: 10px;
-   }
-   
-   .brand span {
-     color: var(--light-primary-color);
-   }
-   
-   .menu {
-     list-style: none;
-     display: flex;
-     width: 50%;
-     justify-content: flex-end;
-     flex-direction: column;
-     position: absolute;
-     height: 100vh;
-     width: 100%;
-     background-color: var(--accent-color);
-     z-index: 1;
-     opacity: 0;
-     transform: translateX(-110%);
-   }
-   
-   .menu a {
-     color: var(--light-primary-color);
-     text-decoration: none;
-     padding: 4px;
-     font-size: medium;
-     transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
-   }
-   
-   .menu a:hover {
-     background-color: var(--dark-primary-color);
-     color: var(--primary-text);
-   }
-   
-   .menu a:focus {
-     background-color: var(--dark-primary-color);
-     color: var(--light-primary-color);
-     outline: none;
-   }
-   
-   .toggle-menu {
-     display: block;
-     cursor: pointer;
-   }
-   
-   #toggle-open {
-     font-size: 1.5em;
-     margin-top: -0.2em;
-   }
-   
-   .menu.open {
-     opacity: 1;
-     visibility: visible;
-     transform: translateX(0);
-   }
-   
-   .menu li {
-     margin: 1em;
-   }
-   
-   @media screen and (min-width: 768px) {
-     .menu {
-       position: static;
-       flex-direction: row;
-       justify-content: flex-end;
-       height: auto;
-       background-color: transparent;
-       opacity: 1;
-       visibility: visible;
-       transform: translateX(0);
-       transition: none;
-     }
-   
-     .toggle-menu {
-       display: none;
-     }
-   }
-   
+  background-color: var(--dark-primary-color);
+  color: var(--primary-text);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  font-size: 1.2rem;
+  height: auto;
+}
+
+.brand span {
+  color: var(--light-primary-color);
+}
+
+.menu {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  width: 40%;
+  z-index: 1;
+  opacity: 0;
+  transform: translateX(-110%);
+}
+
+.menu a {
+  color: var(--text-icons); 
+  text-decoration: none;
+  padding: 4px;
+  font-size: large;
+  transition: color 0.3s ease-in-out;
+}
+
+.toggle-menu {
+  display: block;
+  cursor: pointer;
+}
+
+#toggle-open {
+  font-size: 1.5em;
+  margin-top: -0.2em;
+}
+
+
+@media screen and (min-width: 768px) {
+   .menu { 
+    background-color: transparent;
+    opacity: 1;
+    visibility: visible;
+    transform: translateX(0);
+    transition: none;
+  }
+
+  .menu li {
+    margin: 0.5em;
+  }
+
+  .menu a:hover {
+    cursor: pointer;
+    color: var(--primary-text);
+    text-decoration: underline;
+  }
+
+  .toggle-menu {
+    display: none;
+  }
+}
